--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: black;
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.sidebarItem{
+  position: fixed;
+  left: 0;
+  background-color: gray;
+  width: 19.5vw;
 }
+.flex{
+  display:flex;
+}
+.flex1{
+  flex: 0.2;
+}
+.flex2{
+  flex: 0.8;
+  flex-direction: column;
+}
+button{
+  background-color: transparent;
+  border: none;
+  font-size: large;
+  padding: 5px 10px 5px 10px;
+  cursor: pointer;
+  width: 100%;
+  border-bottom: 1px solid white;
+  text-transform: capitalize;
+}
+button:hover{
+  background-color: rgb(168, 158, 158);
+}
+h1{text-transform: 
+  capitalize;
+  text-align: center;
+  text-decoration: underline;
+  margin: 20px 0 20px 0;}
+.content{
+  width: 50vw;
+  margin: auto;
+  background-color: gray;
+  padding: 20px;
+  border-radius: 20px;
+}
+.install,.import{
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  background-color: black;
+  color: white;
+  font-size: larger;
+  margin-bottom: 10px;
+}
+.material{
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  background-color: black;
+  color: white;
+  font-size: larger;
+}
+h2{font-weight: 500;}
