Added all the git commands in thr git section

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+span{
+  color: red;
+}
+.p{color: cyan;}
 .sidebarItem{
   position: fixed;
   left: 0;
